--- a/teamscouting/style.css
+++ b/teamscouting/style.css
@@ -3,80 +3,142 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
 :root {
-    --red: #ff0000;
-    --blue: #0000ff;
+  --red: #ff0000;
+  --blue: #0000ff;
+
+  --light-red: #ff4444;
+  --light-blue: #4488ff;
+  --light-yellow: #ffec44;
+  --light-purple: #ab44ff;
+  --light-gray: #a1a1a1;
+
+  --light-red-hover: #ff8888;
+  --light-blue-hover: #88ccff;
+  --light-yellow-hover: #fff38a;
+  --light-purple-hover: #ca8aff;
+
+  --light-red-active: #ff6666;
+  --light-blue-active: #66aaff;
+
+  --dark-red: #cc0000;
+  --dark-blue: #0000cc;
+  --dark-gray: #666666;
+
+  --light-red-disabled: #ccaaaa;
+  --light-blue-disabled: #aaaacc;
+
+  --dark-red-disabled: #aa8888;
+  --dark-blue-disabled: #8888aa;
+
+  --button-rows: 11;
+  --scoringGrid: 9;
+  --buttonGrid: 2;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.default-button, label {
+  outline: #aaa 1px solid;
+  border-radius: 5px;
+  padding: 4px !important;
+}
+
+button, label {
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background-color: #fff;
+  font-family: "Inter", sans-serif;
+  transition: background-color 0.2s ease-out, font-size 0.2s ease-out,
+    color 0.2s ease-out;
+  white-space: nowrap;
+  font-size: 2.5vh;
+}
+
+input[type=file] {
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+button:hover, label:hover {
+  background-color: #ccc;
+}
+
+button:active, label:active {
+  background-color: #aaa;
 }
 
 #topBar {
-    width: 100%;
-    height: 3rem;
-    flex-shrink: 0;
-    background: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    overflow: hidden;
+  width: 100%;
+  height: 10vh;
+  flex-shrink: 0;
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  font-size: 1.3vh;
 }
 
 canvas {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .button {
-    display: flex;
-    justify-content: center;
-    font-family: "Inter", sans-serif;
-    align-items: center;
-    height: 100%;
-    padding: 0 1rem;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 0.9rem;
-    flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  font-family: "Inter", sans-serif;
+  align-items: center;
+  height: 100%;
+  padding: 0 1rem;
+  background: none;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  font-size: 0.9rem;
+  flex-shrink: 0;
+  overflow: hidden;
 }
 
 .button:hover {
-    background: #f2f2f2;
+  background: #f2f2f2;
 }
 
 .buttonSquare {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    aspect-ratio: 1;
-    padding: 0;
-    background: none;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  aspect-ratio: 1;
+  padding: 0;
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-size: 2rem;
 }
 
 .buttonSquare:hover {
-    background: #f2f2f2;
+  background: #f2f2f2;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 h1,
@@ -85,136 +147,348 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 500;
-    padding: 0 0.5rem;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-shrink: 0;
+  font-weight: 500;
+  padding: 0 0.5rem;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-shrink: 0;
 }
 
 h1 {
-    font-size: 1.5rem;
+  font-size: 5vh;
 }
 
 h2 {
-    font-size: 1.2rem;
+  font-size: 4vh;
 }
 
 h3 {
-    font-size: 1rem;
+  font-size: 4vh;
 }
 
 h4 {
-    font-size: 0.8rem;
+  font-size: 3vh;
 }
 
 .separator {
-    flex-grow: 1;
-    height: 100%;
-    display: flex;
-    align-items: center;
+  flex-grow: 1;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .mono {
-    font-family: "Source Code Pro", monospace;
+  font-family: "Source Code Pro", monospace;
 }
 
 .third {
-    min-width: calc(100% / 3);
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  /* min-width: calc(100% / 3); */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .left {
-    justify-content: flex-start;
+  justify-content: flex-start;
 }
 
 .right {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .text-red {
-    color: var(--red);
+  color: var(--red);
 }
 
 .text-blue {
-    color: var(--blue);
+  color: var(--blue);
 }
 
 .bg-red {
-    background: var(--red);
+  background: var(--red);
 }
 
 .bg-blue {
-    background: var(--blue);
+  background: var(--blue);
+}
+
+.diamond {
+  width: 12px;
+  height: 12px;
+  transform: rotate(45deg);
 }
 
 .flex {
-    display: flex;
-    align-items: center;
-    gap: 0.3rem;
-}
-
-.cone {
-    clip-path: polygon(0 100%, 100% 100%, 50% 0);
-    width: 15px;
-    height: 15px;
-    background-color: orange;
-}
-
-.cube {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    width: 15px;
-    height: 15px;
-    background-color: blue;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
 }
 
 .bold {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 #board {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    background: #555;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background: #555;
 }
 
 #topOfField {
-    /* take up 3 columns */
-    grid-column: 1 / 4;
-    flex-grow: 1;
-    display: flex;
+  /* take up 3 columns */
+  grid-column: 1 / 4;
+  flex-grow: 1;
+  display: flex;
+  height: calc(100% * 9 / var(--button-rows));
 }
 
 #bottomOfField {
-    display: grid;
-    /* 3 cols */
-    grid-template-columns: 1fr 1fr 1fr;
-    flex-shrink: 0;
-    height: 200px;
+  display: flex;
+  flex-shrink: 0;
+  height: calc(100% * 2 / var(--button-rows));
 }
 
 #bottomOfField > div {
-    height: 100%;
+  height: 100%;
 }
 
-.scoringZone {
-    width: 20vw;
-    height: 100%;
+#bottomOfField > div.loadingZone {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  aspect-ratio: 3/2;
 }
 
-#centerZone {
-    flex-grow: 1;
+.scoringGrid {
+  height: 100%;
+  aspect-ratio: 3/9;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(9, 1fr);
+}
+
+.centerZone {
+  flex-grow: 1;
+  display: flex;
+}
+
+.centerField {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 div {
-    outline: 1px dashed #ff000055;
+  /* outline: 1px dashed #ff000055; */
+}
+
+.loadingZone > .zoneSection {
+  /* 1 column span 1 row span */
+  font-size: 2rem;
+  font-weight: 600;
+  background: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+i {
+  font-size: 4vh;
+}
+
+i.big {
+  font-size: 4vh;
+}
+
+.centerBottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
+  align-items: center;
+  height: 100%;
+  row-gap: 0;
+}
+
+#robots {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  align-items: center;
+  height: calc(100% * 2 / 9);
+  width: 100%;
+}
+
+.centerBottom > button,
+#robots > button {
+  border-radius: 0.2rem;
+  padding: 0 1vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.centerBottom > button {
+  height: 30%;
+}
+#robots > button {
+  height: 50%;
+}
+
+.chargeStation {
+  height: 50%;
+  width: 20%;
+  padding: 10%;
+}
+
+.chargeStation > button {
+  height: 50%;
+  width: 100%;
+}
+
+#field {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.redButton {
+  background: var(--light-red);
+  border: 2px solid var(--dark-red);
+  color: #fff;
+  cursor: pointer;
+}
+
+.blueButton {
+  background: var(--light-blue);
+  border: 2px solid var(--dark-blue);
+  color: #fff;
+  cursor: pointer;
+}
+
+.redButton:hover {
+  background: var(--light-red-hover);
+}
+
+.blueButton:hover {
+  background: var(--light-blue-hover);
+}
+
+.redButton:active {
+  background: var(--light-red-active) !important;
+}
+
+.blueButton:active {
+  background: var(--light-blue-active) !important;
+}
+
+.redButton:disabled {
+  background: var(--light-red-disabled) !important;
+  border-color: var(--dark-red-disabled) !important;
+}
+
+.blueButton:disabled {
+  background: var(--light-blue-disabled) !important;
+  border-color: var(--dark-blue-disabled) !important;
+}
+
+.loadingZone > button {
+  height: 50%;
+  width: 100%;
+}
+
+.redButton.selected {
+  background: var(--light-red-hover) !important;
+}
+
+.blueButton.selected {
+  background: var(--light-blue-hover) !important;
+}
+
+#cubeSelector {
+  background: var(--light-purple);
+}
+
+#cubeSelector:hover,
+#cubeSelector.selected {
+  background: var(--light-purple-hover) !important;
+}
+
+#coneSelector {
+  background: var(--light-yellow);
+}
+
+#coneSelector:hover,
+#coneSelector.selected {
+  background: var(--light-yellow-hover) !important;
+}
+
+button:disabled {
+  background: var(--light-gray);
+}
+
+.chargeStation > button:nth-child(1) {
+  border-top-left-radius: 0.2rem;
+  border-top-right-radius: 0.2rem;
+}
+
+.chargeStation > button:nth-child(2) {
+  border-bottom-left-radius: 0.2rem;
+  border-bottom-right-radius: 0.2rem;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
+.robot-disabled {
+  text-decoration: line-through;
+  color: #000 !important;
+}
+
+input {
+  border: #444 1px solid;
+  border-radius: 0.3rem;
+  outline: none;
+  background: none;
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  width: 120px;
+  padding: 3px;
+}
+
+*[data-type="cone"] {
+  color: var(--light-yellow);
+}
+
+*[data-type="cube"] {
+  color: var(--light-purple);
+}
+
+.inventory[data-type="cube"] {
+  width: 3vh;
+  height: 3vh;
+  background-color: var(--light-purple);
+}
+
+.inventory[data-type="cone"] {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 1.5vh 3vh 1.5vh;
+  border-color: transparent transparent var(--light-yellow) transparent;
 }
